--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>QUAL É SUA CLASSE SOCIAL?</h1>
     Sua renda mensal = <input type="number" name="txtcl" id="txtcl" class="txtcl"> 
-    <input type="button" value="Vereficar" id="botao" class="txtcl"> 
+    <input type="button" value="Verificar" id="botao" class="txtcl"> 
     <div class="resultado
     " id="resultado">Pobre ou burguês?</div>
     <script src="conditions.js"></script>
