Upgrade no estilo

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>QUAL É SUA CLASSE SOCIAL?</h1>
-    Sua renda mensal = <input type="number" name="txtcl" id="txtcl" class="txtcl"> 
-    <input type="button" value="Verificar" id="botao" class="txtcl"> 
-    <div class="resultado
-    " id="resultado">Pobre ou burguês?</div>
+    <header class="cabeçalho">
+        <h1>QUAL É SUA CLASSE SOCIAL?</h1>
+    </header>
+    
+    <div class="content">
+        Sua renda mensal = <input type="number" name="txtcl" id="txtcl" >
+        <input type="button" value="Verificar" id="botao">
+        <div class="resultado
+        " id="resultado">Pobre ou burguês?</div>
+    </div>
+    
     <script src="conditions.js"></script>
 </body>
 </html>
