--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     
     <div class="content">
-        Sua renda mensal = <input type="number" name="txtcl" id="txtcl" >
+        Sua renda mensal = R$<input type="number" name="txtcl" id="txtcl" >
         <input type="button" value="Verificar" id="botao">
         <div class="resultado
         " id="resultado">Pobre ou burguês?</div>
