--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classe Social</title>
     <link rel="stylesheet" href="style.css">
+    <title>Classe Social</title>
+    
 </head>
 
 <body>
@@ -26,6 +27,10 @@
         </article>
     </main>
     
+    <footer>
+        <p>Me encontre no <a href="https://github.com/EdOzz42">GitHub</a></p>
+    </footer>
+
     <script src="conditions.js"></script>
 </body>
 </html>
